# Person-AI

./: .env.example  .fletignore  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
person_ai/: __init__.py  app.py  config.py  i18n.py  theme.py
person_ai/models/: __init__.py  character.py  chat_session.py
person_ai/services/: __init__.py  ai_providers.py  storage.py  streaming.py
person_ai/ui/: app_state.py
person_ai/ui/components/: character_card.py  chat_bubble.py  settings_section.py  typing_indicator.py
person_ai/ui/screens/: character_detail_screen.py  character_form_screen.py  character_gallery_screen.py  chat_screen.py  settings_screen.py
